<resources>
    <string name="app_name">UVCVideoMock</string>
    <string name="select">Select USB Web Camera</string>
    <string name="camera">Camera</string>
    <string name="refresh">Refresh</string>
    <string name="no_device">No USB camera found</string>

    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="flash_low_battery_warning">Flash is disabled by low battery</string>
    <string name="open_flash_failed">Failed to open flash</string>
    <string name="search_menu_title">Search</string>
    <string name="settings_brightness">Brightness</string>
    <string name="settings_close">Close</string>
    <string name="settings_contrast">Contrast</string>
    <string name="settings_flash">Flash</string>
    <string name="settings_reset">Reset</string>
    <string name="settings_reset_toast">reset success</string>
    <string name="settings_resolution">Resolution</string>
    <string name="settings_sound">Camera sound</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="usb_device_disconnect">Night vision device is disconnected</string>
    <string name="usb_device_loading_failed">Night vision device failed to load</string>
    <string name="usb_device_loading_message">Wait for the night vision device to load, please wait!</string>
    <string name="usb_device_loading_message_note">Note:</string>
    <string name="usb_device_loading_message_note_1">1.If the loading fails, please re-plug and use.</string>
    <string name="usb_device_loading_message_note_2">2.Do not pull out directly when using it, or an abnormality may occur.</string>
    <string name="usb_device_not_authorized">Night vision device is not authorized</string>
    <string name="usb_device_not_connected">Night vision device is not connected</string>
    <string name="usb_prompt">Please connect a USB camera</string>
    <string name="usb_update_resolution_failed">Resolution switch failed, please restart night vision</string>
    <string name="usb_update_resolution_message">Resolution switching</string>


</resources>