<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setting_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/settings_brightness"
                android:textColor="@android:color/black" />

            <SeekBar
                android:id="@+id/settings_brightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/settings_contrast"
                android:textColor="@android:color/black" />

            <SeekBar
                android:id="@+id/settings_contrast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical|center_horizontal|center|start"
                android:text="@string/settings_flash"
                android:textColor="@android:color/black" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/settings_flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical|center_horizontal|center|start"
                android:text="@string/settings_sound"
                android:textColor="@android:color/black" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/settings_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/settings_resolution"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/settings_resolution"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <TextView
                android:id="@+id/settings_close"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="center"
                android:text="@string/settings_close"
                android:textColor="@android:color/black" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/settings_reset"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/settings_reset"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>